# SensDataUDP

./: .gitignore  Notes.txt
VCApp/: Build.bat  CMakeLists.txt  VCApp.sln
VCApp/BoostQVM/: CMakeLists.txt
VCApp/Depends/: CMakeLists.txt  NEMATODE_BASE_COMMIT_VER.txt  SFML_BASE_COMMIT_VER.txt
VCApp/Depends/include/SFML/: Config.hpp  Network.hpp
VCApp/Depends/include/SFML/Network/: Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
VCApp/Depends/include/SFML/System/: Clock.hpp  Err.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  Thread.hpp  ThreadLocal.hpp  ThreadLocalPtr.hpp  Time.hpp  Utf.hpp  Vector2.hpp  Vector3.hpp
VCApp/Depends/include/nmeaparse/: Event.h  GPSFix.h  GPSService.h  NMEACommand.h  NMEAParser.h  NumberConversion.h  nmea.h
VCApp/Depends/src/NemaTode/: CMakeLists.txt  GPSFix.cpp  GPSService.cpp  NMEACommand.cpp  NMEAParser.cpp  NemaTode.vcxproj  NemaTode.vcxproj.filters  NumberConversion.cpp
VCApp/Depends/src/SFML/Network/: Ftp.cpp  Http.cpp  IpAddress.cpp  Network.vcxproj  Network.vcxproj.filters  Packet.cpp  Socket.cpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
VCApp/Depends/src/SFML/Network/Unix/: SocketImpl.cpp  SocketImpl.hpp
VCApp/Depends/src/SFML/Network/Win32/: SocketImpl.cpp  SocketImpl.hpp
VCApp/Depends/src/SFML/System/: Clock.cpp  Err.cpp  FileInputStream.cpp  Lock.cpp  MemoryInputStream.cpp  Mutex.cpp  Sleep.cpp  String.cpp  System.vcxproj  System.vcxproj.filters  Thread.cpp  ThreadLocal.cpp  Time.cpp
VCApp/Depends/src/SFML/System/Android/: Activity.cpp  Activity.hpp  NativeActivity.cpp  ResourceStream.cpp  ResourceStream.hpp
VCApp/Depends/src/SFML/System/Unix/: ClockImpl.cpp  ClockImpl.hpp  MutexImpl.cpp  MutexImpl.hpp  SleepImpl.cpp  SleepImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
VCApp/Depends/src/SFML/System/Win32/: ClockImpl.cpp  ClockImpl.hpp  MutexImpl.cpp  MutexImpl.hpp  SleepImpl.cpp  SleepImpl.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp
VCApp/MathLib3D/: BoostQVM.h  CMakeLists.txt  MatConv.h  MathLib3D.h  MathLib3D.vcxproj  MathLib3D.vcxproj.filters  MathUtils.h  Vector4D.h
VCApp/OpenSource_IMU/: MadgwickAHRSupdateIMU_Fixed.c  MadgwickAHRSupdate_Fixed.c  MahonyAHRS.c  MahonyAHRSIMU.c
VCApp/OpenSource_IMU/AHRS_Test/: AHRS_Test.vcxproj  AHRS_Test.vcxproj.filters  AHRS_TestMain.cpp
VCApp/OpenSource_IMU/MadgwickAHRS_C/: MadgwickAHRS_C.c  MadgwickAHRS_C.h  MadgwickAHRS_C.vcxproj  MadgwickAHRS_C.vcxproj.filters
VCApp/OpenSource_IMU/MadgwickAHRS_FIXED_C/: MadgwickAHRS_FIXED.c  MadgwickAHRS_FIXED.h  MadgwickAHRS_FIXED_C.vcxproj  MadgwickAHRS_FIXED_C.vcxproj.filters
VCApp/OpenSource_IMU/MadgwickAHRS_FIXED_C_NEW/: MadgwickAHRS_FIXED_C_NEW.vcxproj  MadgwickAHRS_FIXED_C_NEW.vcxproj.filters  MadgwickAHRS_FIXED_NEW.c  MadgwickAHRS_FIXED_NEW.cpp  MadgwickAHRS_FIXED_NEW.h
VCApp/OpenSource_IMU/MahonyAHRS_C/: MahonyAHRS_C.c  MahonyAHRS_C.h  MahonyAHRS_C.vcxproj  MahonyAHRS_C.vcxproj.filters
VCApp/OpenSource_IMU/MahonyAHRS_C_NEW/: MahonyAHRS_C_NEW.vcxproj
VCApp/VCApp/: AndroidHelperFuncs.cpp  AndroidHelperFuncs.h  AndroidInput.h  CDataPacket.cpp  CDataPacket.h  CDataReceiver.cpp  CDataReceiver.h  CIMUBase.cpp  CIMUBase.h  CIMUSensor.cpp  CIMUSensor.h  CIMU_Acc.cpp  CIMU_Acc.h  CMakeLists.txt  CNMEAEvent.cpp  CNMEAEvent.h  CReceiverFile.cpp  CReceiverFile.h  CRecvSource.cpp  CRecvSource.h  CSensorEvent.cpp  CSensorEvent.h  CSocketClient.cpp  CSocketClient.h  CTimeStamp.cpp  CTimeStamp.h  CTouchEvent.cpp  CTouchEvent.h  ConsoleTools.h  EvCommon.h  IIMUSensor.h  MatConv.h  TouchEvData.cpp  TouchEvData.h  VCApp.cpp  VCApp.vcxproj  VCApp.vcxproj.filters  gestureDetector.cpp  gestureDetector.h  jni.h  (+2 more)
VCApp/VCApp/MathLib/: MathLib3D.h  MathUtils.cpp  MathUtils.h  Vector2D.h  Vector3D.h  Vector4D.h
VCApp/VCApp/Open_IMU_AHRS/: MadgwickAHRS_c.c  MadgwickAHRS_c.h  MahonyAHRS_c.c  MahonyAHRS_c.h  OpenIMU_Notes.txt
app/: build.gradle
app/src/androidTest/java/com/example/sensdataudp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/sensdataudp/: ArrayStream.java  CDataStream.java  CFileStream.java  CNetStream.java  CNetworkListenersReceiver.java  CSockData.java  GNSSDataListener.java  IPUtils.java  IStreamInterface.java  MainActivity.java  SensorListener.java  TouchEvListener.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/sensdataudp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
